# gcwm-report-gen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-lambda.yml  main.yml
src/: http_handler.rs  main.rs
src/domain/: error.rs  find_model_portfolio.rs  mod.rs  traits.rs
src/domain/constrained_types/: abrdn_account_number.rs  abrdn_full_account_number.rs  abrdn_sipp_number.rs  adviser.rs  bank_account_numbers.rs  client_id.rs  constrained_money_amount_large.rs  constrained_money_amount_medium.rs  constrained_money_amount_small.rs  constrained_string_1000.rs  constrained_string_20.rs  constrained_string_200.rs  date.rs  frequency.rs  fund_bonus_allocation.rs  isin.rs  last_review_report_date.rs  meeting_date.rs  mod.rs  name_string.rs  percentage.rs  product_retirement_age.rs  protected_tax_free_cash_entitlement.rs  retirement_age.rs  retirement_year.rs  sedol.rs  tax_year.rs  transact_platform_number.rs  transact_reference_number.rs
src/domain/report/: advice_areas.rs  background_section.rs  contents_section.rs  cover_section.rs  create_report.rs  current_circumstances_section.rs  investment_holdings.rs  mod.rs  objectives.rs  product.rs  recommendations_section.rs  report_type.rs  risk_assessment.rs
src/driven/: mod.rs
src/driven/ai_requests/: mod.rs
src/driven/doc_generator/: lambda.rs  mod.rs
src/driven/repository/: dynamo_db.rs  intelligent_office.rs  (+1 more)
src/driving/: mod.rs
src/helpers/: general_helpers.rs  mod.rs  response_helpers.rs  test_helpers.rs  text_helpers.rs
test_data/: test_lambda_request.json  test_lambda_request_two.json
(+40 files in other folders)
