[package]
name = "gcwm-report-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
serde_json = "1.0.133"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.216"
http = "1.2.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.85"
reqwest = "0.11.18"
base64 = "0.21.2"
dotenv = "0.15.0"
thiserror = "2.0.11"
regex = "1.11.1"
num-format = "0.4.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
aws-config = "1.6.2"
aws-sdk-dynamodb = "1.73.0"
openssl = { version = "0.10", features = ["vendored"] }